--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
 dev = [
     "colorama==0.4.6",
     "matplotlib==3.10.3",
+    "nuitka>=2.8.4",
     "polib==1.2.0",
     "pyinstaller==6.7.0",
     "pytest>=8.4.1",
