ci: 支持fork仓库自己release未签名包

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -29,6 +29,7 @@ jobs:
         fetch-depth: 1
 
     - name: Get version
+      if: ${{ env.CREATE_RELEASE == 'true' }}
       id: get_version
       shell: pwsh
       run: |
@@ -186,7 +187,9 @@ jobs:
     needs:
       - version
       - build
-    if: ${{ (github.event_name == 'workflow_dispatch' && inputs.create_release == true) || startsWith(github.ref, 'refs/tags/') }}
+    if: ${{ github.repository_owner == 'OneDragon-Anything' &&
+            ((github.event_name == 'workflow_dispatch' && inputs.create_release == true) || startsWith(github.ref, 'refs/tags/'))
+        }}
     env:
       SIGNED_DIR: 'signed'
       SIGNPATH_SIGNING_POLICY_SLUG: 'release-signing'
@@ -217,7 +220,11 @@ jobs:
       - version
       - build
       - sign
-    if: ${{ ((github.event_name == 'workflow_dispatch' && inputs.create_release == true) || startsWith(github.ref, 'refs/tags/')) && needs.sign.result == 'success' }}
+    if: ${{ always() &&
+            needs.build.result == 'success' &&
+            ((github.event_name == 'workflow_dispatch' && inputs.create_release == true) || startsWith(github.ref, 'refs/tags/')) &&
+            (github.repository_owner != 'OneDragon-Anything' || needs.sign.result == 'success')
+        }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
