--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ build/
 dist/
 .idea/
 .vscode/
+.conda/
 __pycache__/
 deploy/build/
 deploy/dist/
@@ -60,8 +61,8 @@ config/world_patrol_route_list/*
 .temp_clone/
 .temp_clone**/
 .debug/
-.conda/
 .venv/
+.runtime/
 notice_cache/
 *.bak
 
